# Parallel-Optimizer-Library

./: CMakeLists.txt  Doxyfile  LICENSE  Optimizer.cpp  Optimizer.h  ParticleSwarmOptimization.cpp  ParticleSwarmOptimization.h  README.md  runcmake  wscript
documentation/html/: Optimizer_8h_source.html  ParticleSwarmOptimization_8h.html  ParticleSwarmOptimization_8h_source.html  annotated.html  classMasterOptimizer-members.html  classMasterOptimizer.html  classOptimizationData-members.html  classOptimizationData.html  classOptimizationParameters-members.html  classOptimizationParameters.html  classOptimizationWorker-members.html  classOptimizationWorker.html  classPSOParameters-members.html  classPSOParameters.html  classParameterBounds-members.html  classParameterBounds.html  classParameters-members.html  classParameters.html  classParticleSwarmOptimizer-members.html  classParticleSwarmOptimizer.html  classSwarmParticle-members.html  classSwarmParticle.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  hierarchy.html  index.html  md_README.html  pages.html
documentation/html/search/: all_63.js  all_66.js  all_67.js  all_6c.js  all_6d.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_76.js  all_77.js  all_78.js  classes_6d.js  classes_6f.js  classes_70.js  classes_73.js  (+23 more)
example/: Statistics.h  evaluation.cpp  rosenbrock.cpp
include/: Optimizer.h  ParticleSwarmOptimization.h
include/Optimizer/: Optimizer.h  ParticleSwarmOptimization.h  messaging.h
src/: Optimizer.cpp  ParticleSwarmOptimization.cpp  messaging.cpp
